Add: TheRealNews: The Privatization of Puerto Ricos Public Schools Has Begun

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -2123,6 +2123,13 @@
         This book is a fund raiser for <span lang="es">Junta Gente</span>, a coalition of organizations
         that try to organise disaster recovery after hurrican Maria in September 2017.
       </li>
+      <li>TheRealNews:
+        <a href="https://www.youtube.com/watch?v=Nrcf0XEYazA">The Privatization of Puerto Rico's Public Schools Has Begun</a>
+        (YouTube, 5 minutes, 01.08.2018): the <abbr>USA</abbr> is using the disaster caused by
+        <a href="https://en.wikipedia.org/wiki/Hurricane_Maria">Hurricane Maria</a>
+        in 2017 as an opportunity to privatise schoold and introduce
+        <a href="https://en.wikipedia.org/wiki/Charter_schools_in_the_United_States">charter schools</a>.
+      </li>
       <li><abbr>TYT</abbr> Politics:
         <a href="https://www.youtube.com/watch?v=2gulZH9_VQM">Republicans Kill Rule Allowing Consumers To Sue Banks</a>
         (YouTube, 10 minutes, 25.10.2017).
