Add TheRealNews: Obama Joins Club of the Super-Rich - Defends Global Capitalism in Lecture

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -2707,6 +2707,13 @@
           See also: Tom Oder: "Roundup cover-up? Book paints troubling portrait of the world's most popular weed killer - 'Whitewash' finds disturbing evidence of corporate suppression.", Mother Nature Network, 04.12.2017: https://www.mnn.com/your-home/organic-farming-gardening/stories/roundup-book-whitewash-glyphosate-worlds-most-popular-weed-killer
         -->
       </li>
+      <li>TheRealNews:
+        <a href="https://www.youtube.com/watch?v=jH1mOgjUqxk">Obama Joins Club of the Super-Rich - Defends Global Capitalism in Lecture</a>
+        (YouTube, 24 minutes, 29.07.2018):
+        Paul Jay shows excerpts from Barack Obama's Mandela lecture and discusses them with
+        <a href="https://en.wikipedia.org/wiki/Leo_Panitch">Leo Panitch</a>,
+        co-author of <i class="booktitle">The Making of Global Capitalism: The Political Economy of American Empire</i> (2012).
+      </li>
       <!--Corporate capture:-->
       <li>
         <a href="http://socialistreview.org.uk/281/corporate-capture">Corporate Capture</a>,
