Add Panitch and Gindin: The Making of Global Capitalism: The Political Economy of American Empire

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -2714,6 +2714,14 @@
         <a href="https://en.wikipedia.org/wiki/Leo_Panitch">Leo Panitch</a>,
         co-author of <i class="booktitle">The Making of Global Capitalism: The Political Economy of American Empire</i> (2012).
       </li>
+      <li>Panitch, Leo; Gindin, Sam:
+        <i class="booktitle">The Making of Global Capitalism: The Political Economy of American Empire</i>. London: Verso, 2012.
+        <a href="https://www.versobooks.com/books/1527-the-making-of-global-capitalism"><abbr>ISBN</abbr> 9781781681367</a>.
+        <!--Also at PenguinRandomHouse: https://www.penguinrandomhouse.com/books/233252/the-making-of-global-capitalism-by-leo-panitch-and-sam-gindin/9781781681367/ -->
+        <!--short review by Mike Beggs: https://www.jacobinmag.com/2013/07/jacobin-book-club-the-making-of-global-capitalism/
+          also mentions Hardt and Negri’s Empire; Meiksins Wood’s Empire of Capital; Harvey’s New Imperialism.
+        -->
+      </li>
       <!--Corporate capture:-->
       <li>
         <a href="http://socialistreview.org.uk/281/corporate-capture">Corporate Capture</a>,
