--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -285,6 +285,10 @@
         <i class="website">Aeon</i>, 13.06.2018.
         <br />Andy Owen is the author of <i class="booktitle">All Soldier's Run Away: Alano's War, the Story of a British Deserter</i> (2017).
       </li>
+      <li>Aristotle:
+        <i class="booktitle">The Eudemian Ethics</i>. Translated by Anthony Kenny. Oxford University Press, 2011. (240 pages)
+        <a href="https://global.oup.com/academic/product/the-eudemian-ethics-9780199586431"><abbr>ISBN</abbr> 9780199586431</a>.
+      </li>
       <li>
         <a href="https://en.wikipedia.org/wiki/Onora_O%27Neill">Onora Sylvia O'Neill</a> (Wikipedia).
       </li>
