Add: Aristotle: Nicomachean Ethics, transl. ed. Broadie and Rowe

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -289,6 +289,10 @@
         <i class="booktitle">The Eudemian Ethics</i>. Translated by Anthony Kenny. Oxford University Press, 2011. (240 pages)
         <a href="https://global.oup.com/academic/product/the-eudemian-ethics-9780199586431"><abbr>ISBN</abbr> 9780199586431</a>.
       </li>
+      <li>Aristotle:
+        <i class="booktitle">Nicomachean Ethics</i>. Translated and with commentary by Sarah Broadie and Christopher Rowe. Oxford University Press, 2002 (480 pages)
+        <a href="https://global.oup.com/academic/product/aristotle-nicomachean-ethics-9780198752714"><abbr>ISBN</abbr> 9780198752714</a>.
+      </li>
       <li>
         <a href="https://en.wikipedia.org/wiki/Onora_O%27Neill">Onora Sylvia O'Neill</a> (Wikipedia).
       </li>
