Add Kenny: The Aristotelian Ethics: A Study of the Relationship between the Eudemian and Nicomachean Ethics of Aristotle

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -293,6 +293,10 @@
         <i class="booktitle">Nicomachean Ethics</i>. Translated and with commentary by Sarah Broadie and Christopher Rowe. Oxford University Press, 2002 (480 pages)
         <a href="https://global.oup.com/academic/product/aristotle-nicomachean-ethics-9780198752714"><abbr>ISBN</abbr> 9780198752714</a>.
       </li>
+      <li>Kenny, Anthony:
+        <i class="booktitle">The Aristotelian Ethics: A Study of the Relationship between the Eudemian and Nicomachean Ethics of Aristotle</i>. Second edition. Oxford University Press, 2016. (352 pages)
+        <a href="https://global.oup.com/academic/product/the-aristotelian-ethics-9780198790945"><abbr>ISBN</abbr> 9780198790945</a>.
+      </li>
       <li>
         <a href="https://en.wikipedia.org/wiki/Onora_O%27Neill">Onora Sylvia O'Neill</a> (Wikipedia).
       </li>
