Add The Fight Against Doubt: How to Bridge the Gap Between Scientists and the Public

--- a/science/index.html
+++ b/science/index.html
@@ -1413,6 +1413,11 @@
         (08.06.2019).
         <!--@@PDF-->
       </li>
+      <!--@@science communication:-->
+      <li>de Melo-Martín, Inmaculada; Intemann, Kristen:
+        <i class="booktitle">The Fight Against Doubt: How to Bridge the Gap Between Scientists and the Public</i>. Oxford University Press, 2018. (232 pages)
+        <a href="https://global.oup.com/academic/product/the-fight-against-doubt-9780190869229"><abbr>ISBN</abbr> 9780190869229</a>.
+      </li>
     </ul>
 
     <p>Economics:</p>
