--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -204,6 +204,22 @@
       <li>De Dora, Michael:
         <a href="https://centerforinquiry.org/blog/which_books_do_freethinkers_consider_essential_reading/">Which Books Do Freethinkers Consider Essential Reading?</a>,
         <i class="blog">Center for Inquiry blog</i>, 14.10.2010.
+        <br />This blog posts lists books suggested by people such as Sam Harris, Neil deGrasse Tyson, Phil Plait and Massimo Pigliucci.
+        The following books are the &ldquo;essential ten&dquo;:
+        <ol>
+          <li><i class="booktitle">Why I Am Not a Christian</i> by Bertrand Russell;</li>
+          <li><i class="booktitle">The Demon-Haunted World: Science as a Candle in the Dark </i> by Carl Sagan;</li>
+          <li><i class="booktitle">The God Delusion</i> by Richard Dawkins;</li>
+          <li><i class="booktitle">The End of Faith</i> by Sam Harris;</li>
+          <li><i class="booktitle">The Bible</i>;</li>
+          <li><i class="booktitle">The Works of Robert G. Ingersoll</i>;</li>
+          <li><i class="booktitle">God Is Not Great</i> by Christopher Hitchens;</li>
+          <li><i class="booktitle">Collected Writings</i> by Thomas Paine;</li>
+          <li><i class="booktitle">Letter to a Christian Nation</i> by Sam Harris;</li>
+          <li><i class="booktitle">Why People Believe Weird Things</i> by Michael Shermer.</li>
+        </ol>
+        The other recommendations are also worth reading.
+        As so often with such lists from the English-speaking world, all recommendations were originally written in English, with the exception of the <i class="booktitle">Bible</i>.
       </li>
       <li>
         <a href="https://www.csicop.org/specialcollections/show/carl_sagan_collection">Carl Sagan Collection</a>,
