Add: Thom Hartmann Program: Donald Trump Wants Americans to Fall for Another Stupid War (w/Guest Russ Baker)

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -2722,6 +2722,13 @@
           also mentions Hardt and Negri’s Empire; Meiksins Wood’s Empire of Capital; Harvey’s New Imperialism.
         -->
       </li>
+      <li>Thom Hartmann Program:
+        <a href="https://www.youtube.com/watch?v=Tt_hNDv665o">Donald Trump Wants Americans to Fall for Another Stupid War (w/Guest Russ Baker)</a>
+        (YouTube, 11 minutes, 31.07.2018).
+        Interview with investigative journalist <a href="https://en.wikipedia.org/wiki/Russ_Baker">Russ Baker</a>,
+        author of the book
+        <a href="https://en.wikipedia.org/wiki/Family_of_Secrets"><i class="booktitle">Family of Secrets</i></a> (2008).
+      </li>
       <!--Corporate capture:-->
       <li>
         <a href="http://socialistreview.org.uk/281/corporate-capture">Corporate Capture</a>,
