Add: Renard: L'économie de la Chine

--- a/lijst.html
+++ b/lijst.html
@@ -367,6 +367,10 @@
       <i class="booktitle">L'économie de la Chine</i>. Collection Repères. La Découverte, 2006. (128 pages)
       <a href="https://www.collectionreperes.com/catalogue/index-L___conomie_de_la_Chine-9782707149336.html"><abbr>ISBN</abbr> 9782707149336</a>.
     </li>
+    <li lang="fr">Renard, Mary-Françoise:
+      <i class="booktitle">L'économie de la Chine</i>. Collection Repères. La Découverte, 2018. (128 pages)
+      <a href="https://www.collectionreperes.com/catalogue/index-L___conomie_de_la_Chine-9782707192127.html"><abbr>ISBN</abbr> 9782707192127</a>.
+    </li>
   </ul>
 
   <!--
