--- a/lijst.html
+++ b/lijst.html
@@ -502,6 +502,11 @@
   <section id="misc">
     <h2>Various Other Topics</h2>
     <ul>
+      <li>Rose, Todd:
+        <i class="booktitle">The End of Average: How We Succeed in a World That Values Sameness</i>. HarperCollins, 2016. (256 pages)
+        <a href="https://www.harpercollins.com/9780062358363/the-end-of-average/"><abbr>ISBN</abbr> 9780062358363</a>.
+        (<a href="https://www.toddrose.com/endofaverage">The End of Average &mdash; Todd Rose (author's website)</a>)
+      </li>
       <li>Simon, Herbert A.:
         <strong><i class="booktitle">The Sciences of the Artificial</i></strong>. Third edition. <abbr>MIT</abbr> Press, 1996. (248 pages)
         <a href="https://mitpress.mit.edu/books/sciences-artificial"><abbr>ISBN</abbr> 9780262691918</a>.
