Add DeSalle: The Brain: Big Bangs, Behaviors, and Beliefs

--- a/lijst.html
+++ b/lijst.html
@@ -611,6 +611,9 @@
         <a href="https://www.youtube.com/watch?v=a3_fQiGmM1I">Sole Survivor Of Holocaust Finds More Than Uncanny Parallels to his Past in Trump</a>
         in the Thom Hartmann Program (27.06.2018).)
       </li>
+      <li>DeSalle, Rob; Tattersall, Ian: <i class="booktitle">The Brain: Big Bangs, Behaviors, and Beliefs</i>. Yale University Press, 2014.
+        <a href="https://yalebooks.yale.edu/book/9780300205725/brain"><abbr>ISBN</abbr> 9780300205725</a>.
+      </li>
       <!--
       <li> : <i class="booktitle"></i>. 
         <a href=""><abbr>ISBN</abbr> </a>.
