--- a/lijst.html
+++ b/lijst.html
@@ -498,7 +498,7 @@
         Gazelle Book Services, 2013. (344 pages)
         <abbr>ISBN</abbr> 978-0983011309.
       </li>
-      <li class="perhapsnot">Konnikova, Maria: <i class="booktitle">Mastermind: How to Think Like Sherlock Holmes</i>.
+      <li class="deleted">Konnikova, Maria: <i class="booktitle">Mastermind: How to Think Like Sherlock Holmes</i>.
         Cannongate Books, 2014. (273 pages)
         <a href="https://canongate.co.uk/books/1924-mastermind-how-to-think-like-sherlock-holmes/"><abbr>ISBN</abbr> [978-0857867278]</a>.
       </li>
