Add Gilgamesh (Norton Critical Edition)

--- a/lijst.html
+++ b/lijst.html
@@ -477,6 +477,10 @@
         New Cambridge Shakespeare Studies and Supplementary Texts. Cambridge University Press, 2009.
         <a href="http://www.cambridge.org/de/academic/subjects/literature/renaissance-and-early-modern-literature/problem-reign-king-edward-iii-statistical-approach?format=PB"><abbr>ISBN</abbr> 9780521123488</a>.
       </li>
+      <li>
+        <i class="booktitle">The Epic of Gilgamesh</i>. Translated and edited by Benjamin R. Foster. Second Edition. Norton, 2019. (256 pages)
+        <a href="https://wwnorton.com/books/9780393643985"><abbr>ISBN</abbr> 978-0-393-64398-5</a>.
+      </li>
     </ul>
   </section>
 
@@ -498,9 +502,9 @@
         Gazelle Book Services, 2013. (344 pages)
         <abbr>ISBN</abbr> 978-0983011309.
       </li>
-      <li class="deleted">Konnikova, Maria: <i class="booktitle">Mastermind: How to Think Like Sherlock Holmes</i>.
+      <li class="deleted"><del>Konnikova, Maria: <i class="booktitle">Mastermind: How to Think Like Sherlock Holmes</i>.
         Cannongate Books, 2014. (273 pages)
-        <a href="https://canongate.co.uk/books/1924-mastermind-how-to-think-like-sherlock-holmes/"><abbr>ISBN</abbr> [978-0857867278]</a>.
+        <a href="https://canongate.co.uk/books/1924-mastermind-how-to-think-like-sherlock-holmes/"><abbr>ISBN</abbr> [978-0857867278]</a>.</del>
       </li>
       <li class="perhapsnot">Haidt, Jonathan:
         <i class="booktitle">The Righteous Mind: Why Good People are Divided by Politics and Religion</i>. Vintage (Penguin), 2013.
