Add Toenniessen: Das Geheimnis der transzendenten Zahlen. Eine etwas andere Einführung in die Mathematik. Second edition

--- a/science/mathematics.html
+++ b/science/mathematics.html
@@ -348,6 +348,11 @@
 
     <h2>Other Links</h2>
     <ul>
+      <li><span lang="de">Toenniessen, Fridtjof:
+        <i class="booktitle">Das Geheimnis der transzendenten Zahlen. Eine etwas andere Einführung in die Mathematik</i>. 2. Auflage. Springer, 2019.</span> (440 pages)
+        <a href="https://www.springer.com/gp/book/9783662583258"><abbr>ISBN</abbr> 78-3-662-58325-8</a>.
+        <!--https://www.hdm-stuttgart.de/view_news?ident=news20191022150625-->
+      </li>
       <li>
         <a href="http://www.rwi-essen.de/unstatistik/" hreflang="de" lang="de">Unstatistik des Monats</a>:
         German website where Thomas K. Bauer, Gerd Gigerenzer, Walter Krämer
