Add: The Humanist Report: Bernie Sanders Trolls Koch Bros After Their 'Medicare for All' Study Backfires

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -2762,6 +2762,10 @@
         <q>Sierra Club Executive Director Michael Brune says that both proposals will create more pollution and exacerbate climate change, serving fossil fuel donors' interests at the expense of the environment</q>.
         The proposed budget also aims to increase military spending even more.
       </li>
+      <li>The Humanist Report:
+        <a href="https://www.youtube.com/watch?v=Rtcx1IaTT6w">Bernie Sanders Trolls Koch Bros After Their 'Medicare for All' Study Backfires</a>
+        (YouTube, 10 minutes, 02.04.2018).
+      </li>
       <li>MacLean, Nancy:
         <i class="booktitle">Democracy in Chains: The Deep History of the Radical Right's Stealth Plan for America</i>. Penguin RandomHouse, 2017 (hardcover), June 2018 (paperback).
         <a href="https://www.penguinrandomhouse.com/books/533763/democracy-in-chains-by-nancy-maclean/9781101980972"><abbr>ISBN</abbr> 9781101980972</a>.
