Add Baird: Koch-backed study finds ‘Medicare for All’ would save U.S. trillions

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -2766,6 +2766,12 @@
         <a href="https://www.youtube.com/watch?v=Rtcx1IaTT6w">Bernie Sanders Trolls Koch Bros After Their 'Medicare for All' Study Backfires</a>
         (YouTube, 10 minutes, 02.04.2018).
       </li>
+      <li>Baird, Addy:
+        <a href="https://thinkprogress.org/mercatis-medicare-for-all-study-0a8681353316/">Koch-backed study finds ‘Medicare for All’ would save <abbr>U.S.</abbr> trillions</a>,
+        <i class="website">Think Progress</i>, 30.07.2018.
+        <q>An estimated cost of $32.6 trillion over 10 years is less than the US would spend over the next 10 years under the current system.</q>
+        (<a href="https://www.mercatus.org/system/files/blahous-costs-medicare-mercatus-working-paper-v1_1.pdf">Link to the study</a>.)
+      </li>
       <li>MacLean, Nancy:
         <i class="booktitle">Democracy in Chains: The Deep History of the Radical Right's Stealth Plan for America</i>. Penguin RandomHouse, 2017 (hardcover), June 2018 (paperback).
         <a href="https://www.penguinrandomhouse.com/books/533763/democracy-in-chains-by-nancy-maclean/9781101980972"><abbr>ISBN</abbr> 9781101980972</a>.
