Add: Davies: Science in the Looking Glass (OUP, 2003)

--- a/science/index.html
+++ b/science/index.html
@@ -204,6 +204,13 @@
         <a href="https://en.wikipedia.org/wiki/The_Canon">Wikipedia article
         about the book</a>.
       </li>
+      <li>Davies, Brian E.:
+        <i class="booktitle">Science in the Looking Glass: What Do Scientists Really Know?</i> Oxford University Press, 2003. (295 pages)
+        <abbr>ISBN</abbr> 978 0 19 921918 6.
+        <br />Brian Davies is Professor of Mathematic at King's College, London. His book discusses how scientific questions have been solved in the past
+        and why the scientific theories that will survive are probably those that are least mathematical.
+        He also explains why philosophical questions are important in science.
+      </li>
       <li>Goldacre, Ben:
         <a href="https://en.wikipedia.org/wiki/Bad_Science_%28book%29"
         class="booktitle">Bad Science</a>. 
