Add: Kindler Kompakt Philosophie 19.Jahrhundert

--- a/philosophy/learningphilosophy.html
+++ b/philosophy/learningphilosophy.html
@@ -327,6 +327,19 @@
       Alan Turing & John Searle;
       Peter Singer (Animal Liberation; ...).
     -->
+    <h4>Other Resources on the History of Philosophy</h4>
+    <p>Books</p>:
+    <ul>
+      <li><span lang="de">
+        <i class="title">Kindler Kompakt Philosophie 19.Jahrhundert</i>. Ausgewählt von Jan Urbich. Metzler, 2016</span>. (206 pages)
+        <abbr>ISBN</abbr> 978 3 476 04066 4.<!--www.metzlerverlag.de-->
+        <br />This book covers 36 philosophers from <span lang="de">Fichte</span> to <span lang="de">Rickert</span>,
+        mostly coming from German-speaking countries. Most philosophers are covered on two to four pages;
+        other philosophers, notably <span lang="de">Hegel</span>, <span lang="de">Nietzsche</span> are treated in more detail.
+        Philosophers from outside the German-speaking world include <span lang="fr">Comte</span>, Kierkegaard,
+        Spencer, Mill, <span lang="fr">Taine</span>, C. S. Peirce and William James.
+      </li>
+    </ul>
     <p>YouTube playlists and videos about the history of philosophy:</p>
     <ul>
       <li>
