Add: Emmott: Why Adam Smith wasn’t a heartless neoliberal

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -3015,6 +3015,10 @@
         <i class="magazine">Aeon</i>, 16.01.2018.
         <!--@@PDF-->
       </li>
+      <li>Emmott, Bill:
+        <a href="https://www.prospectmagazine.co.uk/arts-and-books/why-adam-smith-wasnt-a-heartless-neoliberal">Why Adam Smith wasn’t a heartless neoliberal</a>,
+        <i class="magazine">Prospect</i>, August 2018.
+      </li>
       <!--
       <li>:
         <i class="booktitle"></i>.
