Add: Norman: Adam Smith: What He Thought, and Why it Matters

--- a/lijst.html
+++ b/lijst.html
@@ -272,6 +272,10 @@
         <i class="booktitle">Adam Smith's Wealth of Nations: A Reader's Guide</i>. Cambridge University Press, 2015. (293 pages)
         <a href="http://www.cambridge.org/de/academic/subjects/economics/history-economic-thought-and-methodology/adam-smiths-wealth-nations-readers-guide?format=PB"><abbr>ISBN</abbr> 978-1107653764</a>.
       </li>
+      <li>Norman, Jesse:
+        <i class="booktitle">Adam Smith: What He Thought, and Why it Matters</i>. Allen Lane, 2018.
+        <a href="https://www.penguin.co.uk/books/307560/adam-smith/9780241328491/"><abbr>ISBN</abbr> 9780241328491</a>.
+      </li>
       <li>Sowell, Thomas: <i class="booktitle">Basic Economics: A Common Sense Guide to the Economy</i>. Fifth edition. Basic Books, 2014.
         <a href="http://www.basicbooks.com/full-details?isbn=9780465060733"><abbr>ISBN</abbr> 978-0465060733</a>.
         <!-- Recommended by David Pakman: https://www.youtube.com/watch?v=WaUuT_bpPDQ -->
