Add: Moreno Fernandez: La teoría mimética de René Girard. Una visión crítica

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -703,6 +703,10 @@
         (24.02.2016).
         <!-- See also "Chronology of the Neolithic period": https://en.wikipedia.org/wiki/%C3%87atalh%C3%B6y%C3%BCk#Chronology -->
       </li>
+      <li><span lang="es">Moreno Fernández, Agustín:
+        <a href="http://www.gazeta-antropologia.es/?p=4455" hreflang="es">La teoría mimética de René Girard. Una visión crítica</a>,
+        <i class="journal">Gazeta de Antropología</i></span>, 30.1 (2014).
+      </li>
       <!--
       <li>:
         <i class="booktitle"></i>. .
