Add: Jesse Norman: Adam Smith: What He Thought, and Why it Matters

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -3019,6 +3019,10 @@
         <a href="https://www.prospectmagazine.co.uk/arts-and-books/why-adam-smith-wasnt-a-heartless-neoliberal">Why Adam Smith wasn’t a heartless neoliberal</a>,
         <i class="magazine">Prospect</i>, August 2018.
       </li>
+      <li>Norman, Jesse:
+        <i class="booktitle">Adam Smith: What He Thought, and Why it Matters</i>. Allen Lane, 2018.
+        <a href="https://www.penguin.co.uk/books/307560/adam-smith/9780241328491/"><abbr>ISBN</abbr> 9780241328491</a>.
+      </li>
       <!--
       <li>:
         <i class="booktitle"></i>.
