Add: Smedslund: Why Psychology Cannot be an Empirical Science

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -687,6 +687,11 @@
         <i class="magazine">The Psychologist</i>, <abbr>Vol.</abbr> 28 (October 2015): <abbr>pp.</abbr> 782–787:
         responses to Phil Banyard's letter.
       </li>
+      <li>Smedslund, Jan:
+        <a href="https://link.springer.com/article/10.1007%2Fs12124-015-9339-x">Why Psychology Cannot be an Empirical Science</a>,
+        <i class="journal" lang="en-US">Integrative Psychological and Behavioral Science</i>, Volume 50, Issue 2 (June 2016): pages 185–195 (published online in December 2015).
+        <!--@@download PDF-->
+      </li>
       <li>Ben Rosenberg:
         <a href="https://www.psychologyinaction.org/psychology-in-action-1/psychological-science-is-not-broken">Psychological Science Is Not Broken -- It's Maturing</a>,
         <i class="blog">Psychology In Action</i>, 12.10.2017.
