Add: Kusch: Sociology of scientfic knowledge: research guide

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -873,6 +873,10 @@
         (Logology was proposed in the 1930s as a discipline that would subsume several other disciplines, 
         namely epistemology, philosophy of science, psychology of science and sociology of science.)<!--@@the philosophy/psychology/sociology of science?-->
       </li>
+      <li>Kusch, Martin:
+        <a href="https://www.hps.cam.ac.uk/students/research-guide/sociology-scientfic-knowledge">Sociology of scientfic knowledge: research guide</a>,
+        <i class="website">Department of History and Philosophy of Science, University of Cambridge</i> (no date; accessed 14.11.2019).
+      </li>
       <li><span lang="de">Mittelstraß, Jürgen</span>:
         <a href="https://www.youtube.com/watch?v=mJbkigqkz34">Some Epistemological Aspects in the Philosophy of Science</a>,
         recording of a lecture at the University of Innsbruck on 27.01.2015. 
