Add: Did Richard Feynman say “Philosophy of science is about as useful to scientists as ornithology is to birds.”

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -920,6 +920,10 @@
         a rebuttal of Steven Pinker's <i class="booktitle">The Language Instinct</i>.
         <!-- review: http://www.worldwidewords.org/reviews/re-lan4.htm -->
       </li>
+      <li>
+        <a href="https://skeptics.stackexchange.com/q/37670/37758">Did Richard Feynman say “Philosophy of science is about as useful to scientists as ornithology is to birds.”</a>
+        This question was posted on Skeptics Stack Exchange in March 2017.
+      </li>
       <!--li>Shermer, Michael: 
         <a href="@@"><i>Scientia Humanitatis</i>: Reason, empiricism and skepticism are not virtues of science alone</a>,
         <i class="journal">Scientific American</i>, vol. 312, no. 6 (June 2015).
