Add: Michell: The Quantitative Imperative: Positivism, Naive Realism and the Place of Qualitative Methods in Psychology

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -924,6 +924,12 @@
         <a href="https://skeptics.stackexchange.com/q/37670/37758">Did Richard Feynman say “Philosophy of science is about as useful to scientists as ornithology is to birds.”</a>
         This question was posted on Skeptics Stack Exchange in March 2017.
       </li>
+      <!--Quantification as a / the criterion for science:-->
+      <li>Michell, Joel:
+        <a href="https://journals.sagepub.com/doi/10.1177/0959354303013001758">The Quantitative Imperative: Positivism, Naive Realism and the Place of Qualitative Methods in Psychology</a>,
+        <i class="journal">Theory &amp; Psychology</i>, Vol 13, Issue 1 (2003).
+        <!--@@download PDF-->
+      </li>
       <!--li>Shermer, Michael: 
         <a href="@@"><i>Scientia Humanitatis</i>: Reason, empiricism and skepticism are not virtues of science alone</a>,
         <i class="journal">Scientific American</i>, vol. 312, no. 6 (June 2015).
