Add: Martin: Positivism, Quantification and the Phenomena of Psychology

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -930,6 +930,11 @@
         <i class="journal">Theory &amp; Psychology</i>, Vol 13, Issue 1 (2003).
         <!--@@download PDF-->
       </li>
+      <li>Martin, Jack:
+        <a href="https://journals.sagepub.com/doi/abs/10.1177/0959354303013001760">Positivism, Quantification and the Phenomena of Psychology</a>,
+        <i class="journal">Theory &amp; Psychology</i>, Vol 13, Issue 1 (2003).
+        <!--@@download PDF-->
+      </li>
       <!--li>Shermer, Michael: 
         <a href="@@"><i>Scientia Humanitatis</i>: Reason, empiricism and skepticism are not virtues of science alone</a>,
         <i class="journal">Scientific American</i>, vol. 312, no. 6 (June 2015).
