Add: Phillipson: Adam Smith: An Enlightened Life

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -3023,6 +3023,10 @@
         <i class="booktitle">Adam Smith: What He Thought, and Why it Matters</i>. Allen Lane, 2018.
         <a href="https://www.penguin.co.uk/books/307560/adam-smith/9780241328491/"><abbr>ISBN</abbr> 9780241328491</a>.
       </li>
+      <li>Phillipson, Nicholas:
+        <i class="booktitle">Adam Smith: An Enlightened Life</i>. Penguin, 2011.
+        <a href="https://www.penguin.co.uk/books/25603/adam-smith/9780140287288/"><abbr>ISBN</abbr> 9780140287288</a>.
+      </li>
       <!--
       <li>:
         <i class="booktitle"></i>.
@@ -3395,6 +3399,8 @@
         https://sionneau.com/blog/qui-sont-les-chinois/
 
       * Australian academic claims China book 'censored', BBC, 13 November 2017: http://www.bbc.com/news/world-australia-41964047
+
+      * "Amazon's playbook for crushing startups", TechAltar on YouTube, 10 minutes, 07.11.2019: https://www.youtube.com/watch?v=ojGveiE51Hk
     -->
   </main>
 
