Add: Porter: The fetishization of quantification

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -935,6 +935,11 @@
         <i class="journal">Theory &amp; Psychology</i>, Vol 13, Issue 1 (2003).
         <!--@@download PDF-->
       </li>
+      <li>Porter, Theodore M.:
+        <a href="http://science.sciencemag.org/content/359/6375/527">The fetishization of quantification</a>,
+        <i class="magazine">Science</i>, Vol 359, Issue 6375 (02 February 2018).
+        <br />Review of <i class="booktitle">The Tyranny of Metrics</i> by Jerry Z. Muller.
+      </li>
       <!--li>Shermer, Michael: 
         <a href="@@"><i>Scientia Humanitatis</i>: Reason, empiricism and skepticism are not virtues of science alone</a>,
         <i class="journal">Scientific American</i>, vol. 312, no. 6 (June 2015).
