Add: Muller: The Tyranny of Metrics

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -940,6 +940,14 @@
         <i class="magazine">Science</i>, Vol 359, Issue 6375 (02 February 2018).
         <br />Review of <i class="booktitle">The Tyranny of Metrics</i> by Jerry Z. Muller.
       </li>
+      <li>Muller, Jerzy M.:
+        <i class="booktitle">The Tyranny of Metrics</i>. Princeton University Press, 2018. (248 pages)
+        <a href="https://press.princeton.edu/titles/30307.html"><abbr>ISBN</abbr> 9780691191911</a>.
+        <br />This book is not specifically about science:
+        <q lang="en-US">
+          Today, organizations of all kinds are ruled by the belief that the path to success is quantifying human performance, publicizing the results, and dividing up the rewards based on the numbers.
+          But in our zeal to instill the evaluation process with scientific rigor, we've gone from measuring performance to fixating on measuring itself—and this tyranny of metrics now threatens the quality of our organizations and lives.</q>
+      </li>
       <!--li>Shermer, Michael: 
         <a href="@@"><i>Scientia Humanitatis</i>: Reason, empiricism and skepticism are not virtues of science alone</a>,
         <i class="journal">Scientific American</i>, vol. 312, no. 6 (June 2015).
