Add: Discorsi / Gedanken über Politik und Staatsführung

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1266,6 +1266,11 @@
         published in 1675, is available on Wikisource.
       </li>
       <li>Machiavelli, Niccolò:
+        <i class="booktitle">Discorsi. <span lang="de">Gedanken über Politik und Staatsführung</span></i>.
+        <span lang="de">Deutsche Gesamtausgabe. Übersetzt und erläutert von Rudolf Zorn. Mit einem Geleitwort von Herfried Münkler. Dritte Auflage. Kröner</span>, 2007. (377 pages)
+        <a href="https://www.kroener-verlag.de/details/product/discorsi/" hreflang="de"><abbr>ISBN</abbr> 978-3-520-37703-6</a>.
+      </li>
+      <li>Machiavelli, Niccolò:
         <i class="booktitle">The Art of War</i>. Translated, Edited, and with a Commentary by Christopher Lynch. University of Chicago Press, 2003, 2005. (312 pages)
         <a href="http://press.uchicago.edu/ucp/books/book/chicago/A/bo3632018.html"><abbr>ISBN</abbr> 9780226500461</a>.
         <br /><q>Praised by the finest military minds in history and said to have influenced no lesser lights than Frederick the Great and Napoleon, 
