Add: Solomon: War Made Easy: How Presidents and Pundits Keep Spinning Us to Death

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -2948,6 +2948,10 @@
         <a href="https://www.youtube.com/watch?v=WgMWq2H6hu4">Unlimited Worldwide War: <abbr>ACLU</abbr> Warns Senate Against Giving Trump Blank Check to Declare War</a>
         (YouTube, 11 minutes, 18.04.2018).
       </li>
+      <li>Solomon, Norman:
+        <i class="booktitle">War Made Easy: How Presidents and Pundits Keep Spinning Us to Death</i>. Hoboken, New Jersey: John Wiley &amp; Sons, 2005.
+        <abbr>ISBN</abbr> 978-0471694793.
+      </li>
       <!--
       <li>
         <a href=""></a>
