--- a/philscience/index.html
+++ b/philscience/index.html
@@ -948,6 +948,10 @@
           Today, organizations of all kinds are ruled by the belief that the path to success is quantifying human performance, publicizing the results, and dividing up the rewards based on the numbers.
           But in our zeal to instill the evaluation process with scientific rigor, we've gone from measuring performance to fixating on measuring itself—and this tyranny of metrics now threatens the quality of our organizations and lives.</q>
       </li>
+      <li>Stove, D. C.: <i class="booktitle">The Rationality of Induction</i>. Oxford University Press, 1986. (238 pages)
+        <a href="https://global.oup.com/academic/product/the-rationality-of-induction-9780198247890"><abbr>ISBN</abbr> 9780198247890</a>.
+        <br />See <a href="https://en.wikipedia.org/wiki/David_Stove">David Stove (Wikipedia)</a>.
+      </li>
       <!--li>Shermer, Michael: 
         <a href="@@"><i>Scientia Humanitatis</i>: Reason, empiricism and skepticism are not virtues of science alone</a>,
         <i class="journal">Scientific American</i>, vol. 312, no. 6 (June 2015).
