Add: Newell: Machiavelli and Xenophon on Princely Rule: A Double-Edged Encounter

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1405,6 +1405,12 @@
         <i class="booktitle">Machiavel</i>. Fayard</span>, 1985. (450 pages)
         <a href="http://www.fayard.fr/machiavel-9782213015781" hreflang="fr"><abbr>ISBN</abbr> 9782213015781</a>.
         <!--@@excerpt available-->
+      </li>
+      <li>Newell, W. R.:
+        <a href="https://www.journals.uchicago.edu/doi/abs/10.2307/2131043?journalCode=jop">Machiavelli and Xenophon on Princely Rule: A Double-Edged Encounter</a>,
+        <i class="journal">The Journal of Politics</i>, Volume 50, Number 1 (February 1988).
+        <!--@@PDF-->
+      </li>
     </ul>
     <p>Articles, podcasts, videos and blog posts:</p>
     <ul>
