Add: Norris: Philosophy of Language and the Challenge to Scientific Realism

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -607,7 +607,7 @@
         (This is an older version of the previous article.)
       </li>
       <li>Putnam, Hilary: 
-        <a href="https://www.youtube.com/watch?v=-1OESPPs68E">Naive Realism and Qualia</a>,<!-- @@check -->
+        <a href="https://www.youtube.com/watch?v=-1OESPPs68E">Naive Realism and Qualia</a>,<!--@@check-->
         a talk delivered at the occasion of the 20th anniversary of the 
         <a href="http://ratio.huji.ac.il/">Federmann Center for the Study of Rationality</a>
         at the Hebrew University of Jerusalem.
@@ -618,6 +618,14 @@
         <a href="https://www.youtube.com/playlist?list=PLF9TqKNSisvLWcOiLwHj7sLM7CJuT6pY-">Phil Science Realism anti-realism</a>:
         a collection of 9 short videos, some of which discusses
         realism versus anti-realism.
+      </li>
+      <li>Norris, Christopher:
+        <i class="booktitle">Philosophy of Language and the Challenge to Scientific Realism</i>. Routledge, 2003. (224 pages)
+        <a href="https://www.routledge.com/Philosophy-of-Language-and-the-Challenge-to-Scientific-Realism/Norris/p/book/9780415327862"><abbr>ISBN</abbr> 9780415327862</a>.
+        <br />From the publisher's book description:
+        <blockquote>In this book Christopher Norris develops the case for scientific realism by tackling various adversary arguments from a range of anti-realist positions.
+          Through a close critical reading he shows how they fail to make adequate sense on any rational, consistent, and scientifically-informed survey of the evidence.
+        (&hellip;)</blockquote>
       </li>
     </ul>
 
