Add: Dicken: A Critical Introduction to Scientific Realism

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -577,6 +577,15 @@
 
     <h2>Realism versus Anti-Realism</h2>
     <ul>
+      <li>Dicken, Paul:
+        <i class="booktitle">A Critical Introduction to Scientific Realism</i>. Bloomsbury, 2016. (224 pages)
+        <a href="https://www.bloomsbury.com/uk/a-critical-introduction-to-scientific-realism-9781472575906/"><abbr>ISBN</abbr> 9781472575906</a>.<!--£28.99-->
+        <br />From the publisher's book description:
+        <blockquote>Moving from its origins in logical positivism to some of the most recent issues discussed in the literature, this critical introduction covers the no-miracles argument, the pessimistic meta-induction and structural realism.
+          Placing arguments in their historical context, Paul Dicken approaches scientific realism debate as a particular instance of our more general epistemological investigations.
+          The recurrent theme is that the scientific realism debate is in fact a pseudo-philosophical question.
+        </blockquote>
+      </li>
       <li>Blackburn, Simon:
         <a href="https://www.youtube.com/watch?v=CqB51cc1GnY">Realism vs Antirealism</a>,
         a 10-minute excerpt from an interview (uploaded July 2015).
