Add: Williams & Robinson: Scientism: The New Orthodoxy

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -492,6 +492,14 @@
         <i class="website">Wikipedia</i>.
         This article discusses various definitions of scientism.
       </li>
+      <li>Williams, Richard N.; Robinson, Daniel N.:
+        <i class="booktitle">Scientism: The New Orthodoxy</i>. Bloomsbury, 2016. (208 pages)
+        <a href="https://www.bloomsbury.com/uk/scientism-the-new-orthodoxy-9781474287944/"><abbr>ISBN</abbr> 9781474287944</a>.
+        <br />From the publisher's book description:
+        <blockquote>Clarifying and defining the key terms in play in discussions of scientism, this collection identifies the dimensions that differentiate science from scientism.
+          Leading scholars appraise the means available to science, covering the impact of the neurosciences and the new challenges it presents for the law and the self.
+          Illustrating the effect of scientism on the social sciences, and the humanities, <i class="booktitle">Scientism: the New Orthodoxy</i> addresses what science is and what it is not.</blockquote>
+      </li>
       <li><a href="https://sites.google.com/site/scientismworkshop/home">Scientism Workshop</a>:
         a workshop about the concept of scientism, organised by <span lang="it">Massimo Pigliucci</span>
         and <span lang="nl">Maarten Boudry</span> in May 2014.
