--- a/philscience/index.html
+++ b/philscience/index.html
@@ -263,6 +263,18 @@
         <i class="booktitle">Styles of Scientific Thinking in the European Tradition: The History of Argument and Explanation Especially in the Mathematical and Biomedical Sciences and Arts</i> (Duckworth, 1994).
         </span>
       </li>
+      <li>Dicken, Paul:
+        <i class="booktitle">Getting Science Wrong</i>. Bloomsbury, 2018. (224 pages)
+        <a href="https://www.bloomsbury.com/uk/getting-science-wrong-9781350007284/"><abbr>ISBN</abbr> 9781350007284</a>.
+        <br />From the publisher's book description:
+        <blockquote><p>When Galileo dropped cannon-balls from the top of the Leaning Tower of Pisa, he did more than overturn centuries of scientific orthodoxy.
+          At a stroke, he established a new conception of the scientific method based upon careful experimentation and rigorous observation (&hellip;).</p>
+          <p>The problem is that Galileo never performed his most celebrated experiment in Pisa. In fact, he rarely conducted any experiments at all.
+            The Church publicly celebrated his work, and Galileo enjoyed patronage from the great and the powerful; his ecclesiastical difficulties only began when disgruntled colleagues launched a campaign to discredit their academic rival.
+            But what does this tell us about modern science if its own foundation myth turns out to be nothing more than political propaganda?
+          </p>
+        </blockquote>
+      </li>
       <!-- 
         * Ladyman, James: Understanding Philosophy of Science. Routledge, 2001. 
           (In 2009, Massimo Pigliucci wrote, "Still, I'm planning to use this book next semester in a 300-level class on philosophy of science, and I'm looking forward to the puzzled reactions of my students when they'll begin to appreciate how little we understand about how science works." http://www.amazon.com/Understanding-Philosophy-Science-James-Ladyman/dp/0415221579/
