Add link to example article: Machiavelli and Xenophon

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1537,6 +1537,8 @@
       <li>
         <a href="http://ianchadwick.com/machiavelli/">The Municipal Machiavelli</a>:
         <q>Machiavelli's The Prince Rewritten for Municipal Politicians</q>.
+        See for example the article
+        <a href="http://ianchadwick.com/machiavelli/machiavelli-and-xenophon/">Machiavelli and Xenophon</a>.
       </li>
       <li>Darmiento, Mike:
         <a href="http://www.investingintheclassics.com/archives/529">Machiavelli’s The Prince: On History and Fame</a> (18.10.2015),
