Add: Specter: Denialism: How Irrational Thinking Hinders Scientific Progress, Harms the Planet, and Threatens Our Lives

--- a/science/index.html
+++ b/science/index.html
@@ -801,6 +801,13 @@
       creationism and climate change denial, which are particularly strong in the <abbr>USA</abbr>.
     </p>
     <ul>
+      <li>Specter, Michael:
+        <i class="booktitle">Denialism: How Irrational Thinking Hinders Scientific Progress, Harms the Planet, and Threatens Our Lives</i>. Penguin Press, 2009 / Duckworth Overlook, 2010.
+        <abbr>ISBN</abbr> 1594202303 (Penguin) / <abbr>ISBN</abbr> 0715653032 (Duckworth Overlook).
+        <br />Review by
+        <a href="https://wwwnc.cdc.gov/eid/article/16/4/09-1710_article">Tara C. Smith (on <abbr title="Centers for Disease Control and Prevention">CDC</abbr>.gov), 2010</a>.
+        <!--also at https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3321972/ -->
+      </li>
       <li>Mooney, Chris C.:
         <i class="booktitle">The Republican War on Science</i>.
         Basic Books, 2005.
