Add: h2: online courses

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -1002,6 +1002,16 @@
       </li>
     </ul>
 
+    <p>Online courses:</p>
+    <ul>
+      <li>
+        <a href="https://www.futurelearn.com/courses/artificial-intelligence">Digital Skills: Artificial Intelligence</a>:
+        an online course by Accenture hosted on FutureLearn.
+        The course requires an estimated 2 hours of study per week over the course of three weeks.
+        The first run started on 28 October 2019.
+      </li>
+    </ul>
+
     <p>Books:</p>
     <ul>
       <li>Alpaydin, Ethem:
