Add: Ricky Gervais And Stephen Go Head-To-Head On Religion

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -529,6 +529,19 @@
         <q>In these essays, nineteen leading philosophers explore the inner life of atheism and shatter common stereotypes surrounding atheism.</q>
         <q>The collected essays prove that morality is independent of the existence of God by using arguments that date back to Plato.</q>
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=P5ZOwNK6n9U">Ricky Gervais And Stephen Go Head-To-Head On Religion</a>
+        (<i class="ytchannel">The Late Show with Stephen Colbert</i> on YouTube, 5 minutes, 02.02.2017).
+        <br />When Stephen Colbert asks Ricky Gervais whether atheism isn't just another belief system,
+        and whether atheists don't just simply believe what science says, Gervais answers,
+        <blockquote cite="https://youtu.be/P5ZOwNK6n9U?t=214">Science is constantlhy proved over time.
+          You see, if we take something, like any fiction and any holy book, and any other fiction and destroyed it, okay,
+          in a thousand years' time, that wouldn't come back just as it was.
+          But if we took every science book and every fact and destroyed them all,
+          in a thousand years' time, they'd all be back,
+          because all the same tests would be the same result.
+        </blockquote>
+      </li>
       <!--
       <li> : <i class="booktitle"></i>. 
         <a href=""><abbr>ISBN</abbr> </a>.
